规范标点, 完善文档

--- a/docs/doc/01.开始.md
+++ b/docs/doc/01.开始.md
@@ -10,11 +10,14 @@ permalink: /doc/
 
 一个基于 Graia 和 Mirai 的快速、可配置、可自定义插件的 QQ 机器人
 
-> 只要将想要守护的事物一直守护到底就好了。
+> 只要将想要守护的事物一直守护到底就好了
 
-[![License](https://img.shields.io/badge/license-AGPL--v3-green)](https://www.gnu.org/licenses/agpl-3.0.html)
-[![Python](https://img.shields.io/badge/python-3.8-blue)](https://docs.python.org/zh-cn/3.8/)
-[![Release](https://img.shields.io/github/v/release/MadokaProject/Application)](https://github.com/MadokaProject/Application/releases/latest)
+<p>
+  <a href="https://www.gnu.org/licenses/agpl-3.0.html" target="_blank"><img src="https://img.shields.io/badge/license-AGPL--v3-green" alt="License" class="no-zoom"></a>
+  <a href="https://docs.python.org/zh-cn/3.8/" target="_blank"><img src="https://img.shields.io/badge/python-3.8-blue" alt="Python" class="no-zoom"></a>
+  <a href="https://github.com/MadokaProject/Madoka" target="_blank"><img src='https://img.shields.io/github/stars/MadokaProject/Madoka' alt='GitHub stars' class="no-zoom"></a>
+  <a href="https://github.com/MadokaProject/Madoka/releases/latest" target="_blank"><img src='https://img.shields.io/github/v/release/MadokaProject/Madoka' alt='Github Release' class="no-zoom"></a>
+</p>
 
 </div>
 
