--- a/docs/doc/03.配置项.md
+++ b/docs/doc/03.配置项.md
@@ -7,7 +7,7 @@ permalink: /doc/settings/
 ## 🎗️说明
 
 1. 请先复制/重命名 `app/core/` 目录下的 `env.config.ini` 文件为 `config.ini`
-2. 所有配置项均无需在首尾添加 `'` `"`，配置文件会将其原封不动的读入
+2. 所有配置项均无需在首尾添加 `'` `"`, 配置文件会将其原封不动的读入
 
 ## ⚙️bot
 
