--- a/docs/doc/02.Mirai API HTTP 安装.md
+++ b/docs/doc/02.Mirai API HTTP 安装.md
@@ -285,17 +285,17 @@ docker pull colsrch/mcl:latest
 <code-group>
   <code-block title="docker-compose.yml" active>
   ``` yaml
-  version: 3
+  version: '3'
   services:
     mcl:
       container_name: mcl
       image: colsrch/mcl:latest
       ports:  # 开放端口, 填写你mirai-api-http中配置的端口
-        - "8080:8080"
+        - 8080:8080
       volumes: # 挂载目录
-        - "../bots:/app/bots"
-        - "../config/Console/AutoLogin.yml:/app/config/Console/AutoLogin.yml"
-        - "../config/net.mamoe.mirai-api-http/setting.yml:/app/config/net.mamoe.mirai-api-http/setting.yml"
+        - ./mcl/bots:/app/bots
+        - ./mcl/config/Console/AutoLogin.yml:/app/config/Console/AutoLogin.yml
+        - ./mcl/config/net.mamoe.mirai-api-http/setting.yml:/app/config/net.mamoe.mirai-api-http/setting.yml
   ```
   </code-block>
 </code-group>
