--- a/docs/doc/04.启动.md
+++ b/docs/doc/04.启动.md
@@ -43,16 +43,16 @@ docker pull colsrch/madoka:latest
 <code-group>
   <code-block title="docker-compose.yml" active>
   ``` yaml
-  version: 3
+  version: '3'
   services:
     qqbot:
       container_name: qqbot
       image: colsrch/madoka:latest
       command: /bin/bash -c "pip3 install -r requirements.txt -r local_requirements.txt -i https://pypi.tuna.tsinghua.edu.cn/simple && python3 main.py"
       ports:  # 开放端口, 填写你webserver中配置的端口
-        - "8081:8080"
+        - 8081:8080
       volumes: # 挂载目录
-        - "../madoka:/app"
+        - ./madoka:/app
   ```
   </code-block>
 </code-group>
