--- a/docs/doc/04.启动.md
+++ b/docs/doc/04.启动.md
@@ -30,12 +30,22 @@ python main.py
 
 我们提供了现成的 Docker 镜像来解决这个问题.
 
+::: tip
+建议拉取 stable 版本镜像以获取最新的稳定代码
+:::
+
+镜像版本:
+- **latest**: 依据 release 分支构建的较稳定镜像
+- **stable**: 依据 master 分支构建的稳定镜像
+- \<**release**\>: Madoka 发布的各个版本的镜像
+- own: 自用镜像(不推荐)
+
 ``` bash
 docker pull colsrch/madoka:latest
 ```
 
 ::: warning
-为了保证 Madoka 的部分功能正常使用, 该镜像仅提供 Madoka 运行所需的基础包
+为了保证 Madoka 的部分功能正常使用, own 版本镜像仅提供 Madoka 运行所需的基础包
 :::
 
 推荐使用 `docker-compose` 部署, 安装方法请自行百度
@@ -48,11 +58,36 @@ docker pull colsrch/madoka:latest
     qqbot:
       container_name: qqbot
       image: colsrch/madoka:latest
-      command: /bin/bash -c "pip3 install -r requirements.txt -r local_requirements.txt -i https://pypi.tuna.tsinghua.edu.cn/simple && python3 main.py"
+      command: /bin/bash -c "pip3 install -r local_requirements.txt -i https://pypi.tuna.tsinghua.edu.cn/simple && python3 main.py"
       ports:  # 开放端口, 填写你webserver中配置的端口
-        - 8081:8080
+        - 8080:8080
       volumes: # 挂载目录
-        - ./madoka:/app
+        - ./extension:/app/plugin/extension
+        - ./config.ini:/app/core/config.ini
+        - ./local_requirements.txt: /app/local_requirements.txt  # 安装的其它插件所需包, 镜像不会集成这些, 需要自己导入安装
+  ```
+  </code-block>
+
+  <code-block title="docker">
+  ``` bash
+  docker run -it --name madoka -p 127.0.0.1:8080:8080 \
+  -v "$PWD/extension:/app/plugin/extension" \
+  -v "$PWD/config.ini:/app/core/config.ini" \
+  colsrch/madoka:latest
   ```
   </code-block>
 </code-group>
+
+## 附: 使用一键部署脚本
+
+使用该脚本你需要提前完成的事情:
+- 配置MySQL
+- 配置Mirai-API-HTTP
+
+为保持 Madoka 后台运行及不污染系统 python 环境, 建议你完成以下事情:
+- 使用终端复用工具: `screen`、`tmux` ...
+- 使用 python 虚拟环境: `Virtualenv`、 `Anaconda` ...
+
+脚本链接: [https://github.com/MadokaProject/Madoka/deploy.sh](https://github.com/MadokaProject/Madoka/deploy.sh)
+
+在合适的地方下载该脚本并运行, 然后根据提示填写相关信息, 小憩片刻.
