--- a/docs/developer/01.插件开发文档/03.命令解析配置.md
+++ b/docs/developer/01.插件开发文档/03.命令解析配置.md
@@ -4,24 +4,27 @@ date: 2022-03-20 13:02:11
 permalink: /developer/doc/step-2
 ---
 
+## 注册命令解析
+
 接下来你需要为你的插件配置命令解析
+
+Madoka 使用 [Arclet Alconna](https://arcletproject.github.io/docs/alconna/tutorial/) 作为命令解析器，建议先阅读 [Arclet Alconna](https://arcletproject.github.io/docs/alconna/tutorial/) 文档。下面给出一些常用写法。
 
 ``` python
 from arclet.alconna import Alconna  # 导入命令解析器
-from app.core.command_manager import CommandManager  # 导入命令管理器
-······
+from app.core.commander import CommandDelegateManager  # 导入命令委托管理器
 
 
-class Module(Plugin):
-    ······
-    manager: CommandManager = CommandManager.get_command_instance()  # 获取命令管理器实例
+manager: CommandDelegateManager = CommandDelegateManager()  # 获取命令委托管理器实例
 
-    @manager(Alconna(
-        pass
-    ))
+@manager.register(
+    entry='<命令头>',
+    brief_help='<主菜单介绍>",
+    alc=<Alconna 实例>
+)
 ```
 
-- 命令解析器基础配置详解:
+**`Alconna` 简单介绍:**
 
 `Alconna` 命令结构类似与 `Linux` 的命令, 由 <前缀> <父命令> <子命令> <可选命令> 组成.
 
@@ -36,58 +39,104 @@ class Module(Plugin):
 ``` python
 from arclet.alconna import Alconna, Subcommand, Option, Args
 
-Alconna(
-    headers=manager.headers,  # 命令前缀(固定写法, 直接使用manager.headers)
-    command=entry,  # 父命令, 入口命令(固定写法, 直接使用entry, 与其一致)
-    options=[
-        Subcommand('install', help_text='安装pip包', args=Args['package': str], options[
-            Option('--upgrade', alias='-u', help_text='更新')
-        ])
-    ],
-    help_text='pip管理'
+@manager.register(
+    entry='<命令头>',
+    brief_help='<主菜单介绍>",
+    alc=Alconna(
+        headers=manager.headers,  # 命令前缀(固定写法, 直接使用manager.headers)
+        command='<命令头 同上>',  # 父命令, 入口命令
+        options=[
+            Subcommand('install', help_text='安装pip包', args=Args['package', str], options[
+                Option('--upgrade|-u', help_text='更新')
+            ])
+        ],
+        help_text='pip管理'
+    )
 )
 ```
 
 - help_text: 帮助文本
-- alias: 可选命令简写
-- Args: ['参数名': 参数类型]
+- Args: [*参数名, *参数类型, (默认值)]
 
-## 配置插件入口方法
+::: tip
+该部分内容具体用法请查看: [https://arcletproject.github.io/docs/alconna/constructs/typical](https://arcletproject.github.io/docs/alconna/constructs/typical)
+:::
 
-接下来你需要写一个命令入口方法, 并接受 Arpamar<解析结果> 和 Alconna<该命令解析器> 参数
+## 配置插件主体函数
+
+接下来你需要写一个函数作为该插件的主体函数, 并选择性的接受一些你需要的参数
 
 ``` python
 ······
+from arclet.alconna import Alconna, ······, Arpamar
+from graia.ariadne.model import Friend
 
+······
 
-class Module(Plugin):
-    from arclet.alconna import Alconna, ······, Arpamar
+@manager.register(
     ······
-    async def plugin_name(self, command: Arpamar, alc: Alconna):
-        pass
+)
+async def process(friend: Friend, cmd: Arpamar, alc: Alconna):
+    pass
 ```
 
-然后将上一步生成的Alconna整合至装饰器中, 并放至该入口方法前
+如果你的插件需要处理好友消息和群消息，那么可以这样写:
 
 ``` python
 ······
+from graia.ariadne.model import Friend, Member, Group
 
 
-class Module(Plugin):
-    ······
-    @manager(Alconna(
-        headers=manager.headers,
-        command=entry,
+async def process(target: Union[Friend, Member], sender: Union[Friend, Group], ······):
+    pass
+```
+
+判断 `target` 或 `sender` 就可以知道消息来源。
+
+### 可接受的参数
+
+你可以选择接受下列参数
+
+- graia.ariadne.Ariadne: Ariadne 主体
+- graia.ariadne.model.Friend: 好友标识
+- graia.ariadne.model.Member: 群成员标识
+- graia.ariadne.model.Group: 群标识
+- graia.ariadne.message.chain.MessageChain: 原始消息
+- graia.ariadne.message.element.Source: 消息 ID
+- graia.broadcast.interrupt.InterruptControl: 中断控制（不推荐使用，具体见后文）
+- arclet.alconna.Arpamar: 解析结果
+- arclet.alconna.Alconna: 命令解析器（主要用于获取帮助菜单）
+
+
+## 完整示例
+
+``` python
+from typing import Union
+
+from arclet.alconna import Alconna, Subcommand, Option, Args, Arpamar
+from graia.ariadne.model import Friend, Member, Group
+
+from app.core.commander import CommandDelegateManager  # 导入命令委托管理器
+
+
+manager: CommandDelegateManager = CommandDelegateManager()  # 获取命令委托管理器实例
+
+@manager.register(
+    entry='<命令头>',
+    brief_help='<主菜单介绍>",
+    alc=Alconna(
+        headers=manager.headers,  # 命令前缀(固定写法, 直接使用manager.headers)
+        command='<命令头 同上>',  # 父命令, 入口命令
         options=[
-            Subcommand('install', help_text='安装pip包', args=Args['package': str], options[
-                Option('--upgrade', alias='-u', help_text='更新')
+            Subcommand('install', help_text='安装pip包', args=Args['package', str], options[
+                Option('--upgrade|-u', help_text='更新')
             ])
         ],
-        # main_args=Args['xxx': xxx],  # 父参数解析
         help_text='pip管理'
-    ))
-    async def plugin_name(self, command: Arpamar, alc: Alconna)
-        pass
+    )
+)
+async def process(target: Union[Friend, Member], sender: Union[Friend, Group], cmd: Arpamar, alc: Alconna):
+    pass
 ```
 
 至此, 一个插件的基本构造已经完成, 接下来你需要自由完成该插件的功能.
@@ -98,10 +147,9 @@ class Module(Plugin):
 Alconna 是一个优秀的命令解析器, 它采用类似与 Linux Shell 的命令方式.
 
 - Arpamar基本方法
-- 1. Arpamar.subcommands: 获取所有解析出来的子命令参数键值对(包括可选命令), 若你不知道它获取出来的数据结构(你为何不print一下呢?)
-- 2. Arpamar.other_args: 获取所有解析出来的可选命令参数键值对.
-- 3. Arpamar.main_args: 获取所有解析出来的主参数键值对
+- 1. Arpamar.find: 判断解析结果中有无指定命令
+- 2. Arpamar.query: 查询解析结果中的指定参数，若存在返回对应结果
 
-::: tip
-其它使用方法请查阅 [Alconna 官方文档](https://arcletproject.github.io/docs/alconna/tutorial/)
+::: theorem 真的真的建议在使用 Alconna 之前先完整阅读一遍官方文档
+[https://arcletproject.github.io/docs/alconna/tutorial/](https://arcletproject.github.io/docs/alconna/tutorial/)
 :::
