--- a/docs/doc/04.启动.md
+++ b/docs/doc/04.启动.md
@@ -14,7 +14,7 @@ permalink: /doc/start/
 
 ## 安装依赖
 
-建议使用 `Virtualenv` 或 `Anaconda` 等虚拟环境工具.
+为避免环境污染，建议使用 `Virtualenv` 或 `Anaconda` 等虚拟环境工具创建虚拟 python 环境。
 
 ``` bash
 pip install -r requirements.txt
@@ -41,7 +41,7 @@ python main.py
 - own: 自用镜像(不推荐)
 
 ``` bash
-docker pull colsrch/madoka:latest
+docker pull colsrch/madoka:stable
 ```
 
 ::: warning
