--- a/docs/developer/01.插件开发文档/01.开始.md
+++ b/docs/developer/01.插件开发文档/01.开始.md
@@ -6,16 +6,25 @@ date: 2022-02-06 15:55:06
 
 <div align="center">
 
-# 你需要了解的事
+# Madoka
+
+插件开发文档
 
 </div>
 
-- ~~插件主体存放目录: `app/plugin/extension`, Madoka启动时会自动加载仅该目录的所有插件.~~
-- ~~插件资源文件存放目录: `app/plugin/extension/<plugin>_res/`.~~
-- ~~插件类名: `Module`~~
-- ~~计划任务类名为：`Tasker`~~
-- ~~数据表初始化类名为：`DB`~~
+## 插件结构
 
-::: danger
-该文档已不适用于最新版本！
-:::
+```
+.
+└── {root_dir}
+    ├── main.py   # 插件入口文件(不一定是这个名字)*
+    ├── requirements.txt  # 依赖文件(pypi)
+    ├── resource  # 其它资源文件
+    └── database  # 数据表支持（可选）
+        ├── database.sql  # 初始化数据表文件*
+        └── {date}-{time}.sql  # 更新数据表文件，时间不可低于当前时间，不可重复
+```
+
+- root_dir: 插件目录名，必须为英文，如需上传至插件中心，命名格式为: {author}_{name}
+- date: 日期, 8位, 如: 19700101
+- time: 时间, 4位, 如: 1030
