--- a/docs/developer/01.插件开发文档/02.创建一个新的插件.md
+++ b/docs/developer/01.插件开发文档/02.创建一个新的插件.md
@@ -4,17 +4,6 @@ date: 2022-03-20 12:55:12
 permalink: /developer/doc/step-1
 ---
 
-在 `app/plugin/extension` 目录新建一个py文件, 文件名即为你的插件英文名.
+在 `app/plugin/extension` 目录新建一个文件夹, 文件名即为该插件的 `root_dir`.
 
-``` python
-from app.plugin.base import Plugin  # 导入插件父类
-
-
-class Module(Plugin):  # 写一个插件类, 类名需为 Module, 指定父类为 Plugin.
-    entry = '<command>'  # 插件入口主命令, 无需携带前缀(必须重写)
-    brief_help = '插件名'  # 插件名, 将显示在主帮助菜单中(必须重写)
-    enable = True  # 插件默认状态, 默认开启, (需要默认禁用该插件时请重写为False)
-    hidden = False  # 插件仅超级管理员以上可见, 默认关闭(可选重写)
-```
-
-至此你就创建了一个新的插件, 但它现在还只是个空壳子, 不能为你做任何的事情.
+Madoka 在启动时会自动加载 `extension` 目录下每个子目录中的 `python` 文件，因此支持一个插件中包含多个命令文件，如 `login.py` 做登录，`logout.py` 做登出。当您只有一个命令文件时，建议命名为 `main.py`。若未提及，本文档均以单个命令文件来写。
