--- a/docs/doc/02.Mirai API HTTP 安装.md
+++ b/docs/doc/02.Mirai API HTTP 安装.md
@@ -57,6 +57,11 @@ permalink: /doc/mah-install/
 
 ## 安装 mirai-console-loader
 
+::: 注意
+目前只支持到 `mirai-console-loader`: `1.2.3`, 
+因此建议手动安装 `mirai-console-loader`
+:::
+
 ### 一键安装
 
 ::: tip
@@ -157,6 +162,10 @@ xxxx-xx-xx xx:xx:xx I/main: mirai-console started successfully.
 现在先输入 `stop` 并回车, 退出 `mirai-console`
 
 ## 安装与配置 mirai-api-http
+
+::: 注意
+受 `mirai-console-loader` 的影响，`mirai-api-http` 请下载 `v2.1.1` 及以下版本
+:::
 
 :::: tabs
 
