--- a/docs/developer/01.插件开发文档/01.开始.md
+++ b/docs/developer/01.插件开发文档/01.开始.md
@@ -21,7 +21,7 @@ date: 2022-02-06 15:55:06
     ├── requirements.txt  # 依赖文件(pypi)
     ├── resource  # 其它资源文件
     └── database  # 数据表支持（可选）
-        ├── database.sql  # 初始化数据表文件*
+        ├── database.py  # 初始化数据表文件*
         └── {date}-{time}.sql  # 更新数据表文件，时间不可低于当前时间，不可重复
 ```
 
