--- a/docs/developer/01.插件开发文档/04.计划任务.md
+++ b/docs/developer/01.插件开发文档/04.计划任务.md
@@ -59,3 +59,7 @@ async def tasks():
 # 每天7点15分30秒执行
 @sche.schedule(timers.crontabify('15 7 * * * 30'))
 ```
+
+::: warning 注意
+不要把 `crontab` 的第六位参数写成 `*`，这将会导致每秒都执行一次。除非你知道你在做什么。
+:::
