docs: 调整视频高度

--- a/docs/doc/02.Mirai API HTTP 安装.md
+++ b/docs/doc/02.Mirai API HTTP 安装.md
@@ -334,4 +334,4 @@ docker pull colsrch/mcl:latest
 
 ## 附: 视频教程
 
-<video src="https://static.colsrch.cn/storage/video/mirai-install.mp4"></video>
+<video height="auto" width="100%" src="https://static.colsrch.cn/storage/video/mirai-install.mp4"></video>
