--- a/docs/doc/03.安装与配置 Madoka.md
+++ b/docs/doc/03.安装与配置 Madoka.md
@@ -116,4 +116,4 @@ docker pull colsrch/madoka:stable
 
 ## 附: 视频教程
 
-<video src="https://static.colsrch.cn/storage/video/madoka-install.mp4"></video>
+<video height="auto" width="100%" src="https://static.colsrch.cn/storage/video/madoka-install.mp4"></video>
