--- a/docs/doc/03.安装与配置 Madoka.md
+++ b/docs/doc/03.安装与配置 Madoka.md
@@ -84,18 +84,22 @@ docker pull colsrch/madoka:stable
       ports:  # 开放端口, 填写你webserver中配置的端口(如果开启)
         - 8080:8080
       volumes: # 挂载目录
-        - ./extension:/app/plugin/extension   # 扩展插件安装目录
-        - ./config.ini:/app/core/config.ini   # 配置文件
+        - ./config.ini:/app/core/config.ini      # 配置文件
+        - ./plugin.json:/app/plugin/plugin.json  # 扩展插件安装信息文件
+        - ./extension:/app/plugin/extension      # 扩展插件安装目录
+        - ./tmp:/app/tmp                         # 临时文件目录
   ```
   </code-block>
 
   <code-block title="docker">
   ``` bash
   docker run -it --name madoka \
-  -p 127.0.0.1:8080:8080 \  # (如果开启了 webserver)
-  -v "$PWD/extension:/app/plugin/extension" \
-  -v "$PWD/config.ini:/app/core/config.ini" \
-  colsrch/madoka:stable
+    -p 127.0.0.1:8080:8080 \                        # 如果开启了 webserver
+    -v "$PWD/config.ini:/app/core/config.ini" \     # 配置文件
+    -v "$PWD/plugin.json:/app/plugin/plugin.json \  # 扩展插件安装信息文件
+    -v "$PWD/extension:/app/plugin/extension" \     # 扩展插件安装目录
+    -v "$PWD/tmp:/app/tmp                           # 临时文件目录
+    colsrch/madoka:stable
   ```
   </code-block>
 </code-group>
@@ -103,8 +107,8 @@ docker pull colsrch/madoka:stable
 ## 附: 使用一键部署脚本(不推荐)
 
 使用该脚本你需要提前完成的事情:
-- 配置MySQL
-- 配置Mirai-API-HTTP
+- 配置 MySQL
+- 配置 Mirai-API-HTTP
 
 为保持 Madoka 后台运行及不污染系统 python 环境, 建议你完成以下事情:
 - 使用终端复用工具: `screen`、`tmux` ...
