--- a/docs/doc/03.安装与配置 Madoka.md
+++ b/docs/doc/03.安装与配置 Madoka.md
@@ -96,9 +96,9 @@ docker pull colsrch/madoka:stable
   docker run -it --name madoka \
     -p 127.0.0.1:8080:8080 \                        # 如果开启了 webserver
     -v "$PWD/config.ini:/app/core/config.ini" \     # 配置文件
-    -v "$PWD/plugin.json:/app/plugin/plugin.json \  # 扩展插件安装信息文件
+    -v "$PWD/plugin.json:/app/plugin/plugin.json" \  # 扩展插件安装信息文件
     -v "$PWD/extension:/app/plugin/extension" \     # 扩展插件安装目录
-    -v "$PWD/tmp:/app/tmp                           # 临时文件目录
+    -v "$PWD/tmp:/app/tmp"                           # 临时文件目录
     colsrch/madoka:stable
   ```
   </code-block>
