更新部署文档

--- a/docs/v3/02.Mirai API HTTP 安装.md
+++ b/docs/v3/02.Mirai API HTTP 安装.md
@@ -1,7 +1,7 @@
 ---
 title: Mirai API HTTP 安装
 date: 2022-02-21 20:12:47
-permalink: /doc/mah-install/
+permalink: /doc/v3/mah-install/
 ---
 
 ## 安装 Java
