--- a/docs/v4/04.保持后台运行.md
+++ b/docs/v4/04.保持后台运行.md
@@ -1,7 +1,7 @@
 ---
 title: 保持后台运行
 date: 2022-02-21 21:31:13
-permalink: /doc/nohub
+permalink: /doc/v4/nohub
 ---
 
 ## Linux
@@ -27,16 +27,16 @@ permalink: /doc/nohub
 
 **eg:**
 
-- python 路径: `/opt/python3.8/bin/python`
+- python 路径: `/opt/python3.9/bin/python`
 - madoka 路径: `/opt/madoka`
 
 ```madoka.service
 ······
 
 # 将该路径修改为你的 Madoka 根路径
-WorkingDirectory=/opt/python3.8/bin/python
+WorkingDirectory=/opt/madoka
 # 将该路径修改为你的 python 可执行文件路径
-ExecStart=/bin/bash -c "/opt/madoka main.py"
+ExecStart=/bin/bash -c "/opt/python3.9/bin/python main.py"
 
 ······
 ```
