--- a/docs/v3/01.开始.md
+++ b/docs/v3/01.开始.md
@@ -1,7 +1,7 @@
 ---
 title: 开始
 date: 2022-02-04 17:43:23
-permalink: /doc/
+permalink: /doc/v3/
 ---
 
 <div align="center">
@@ -16,7 +16,7 @@ permalink: /doc/
   <a href="https://www.gnu.org/licenses/agpl-3.0.html" target="_blank"><img src="https://img.shields.io/badge/license-AGPL--v3-green" alt="License" class="no-zoom"></a>
   <a href="https://docs.python.org/zh-cn/3.8/" target="_blank"><img src="https://img.shields.io/badge/python-3.8-blue" alt="Python" class="no-zoom"></a>
   <a href="https://github.com/MadokaProject/Madoka" target="_blank"><img src='https://img.shields.io/github/stars/MadokaProject/Madoka' alt='GitHub stars' class="no-zoom"></a>
-  <a href="https://github.com/MadokaProject/Madoka/releases/latest" target="_blank"><img src='https://img.shields.io/github/v/release/MadokaProject/Madoka' alt='Github Release' class="no-zoom"></a>
+  <a href="https://github.com/MadokaProject/Madoka/releases/tag/v3.3.0" target="_blank"><img src='https://img.shields.io/badge/release-v3.3.0-blue' alt='Github Release V3.3.0' class="no-zoom"></a>
 </p>
 
 </div>
