添加镜像源

--- a/docs/v4/03.安装与配置 Madoka.md
+++ b/docs/v4/03.安装与配置 Madoka.md
@@ -23,6 +23,10 @@ git clone https://github.com/MadokaProject/Madoka.git
 git clone -b master https://github.com/MadokaProject/Madoka.git
 ```
 
+:::tip
+若您的网络环境不理想（国内网络），可将拉取链接换成: `https://e.coding.net/madokaproject/p/Madoka.git`
+:::
+
 ## 安装依赖
 
 建议使用 [`pdm`](https://pdm.fming.dev/latest/) 安装依赖，`requirements.txt` 将在后续版本中移除.
