更新使用文档

--- a/docs/v4/02.Mirai API HTTP 安装.md
+++ b/docs/v4/02.Mirai API HTTP 安装.md
@@ -111,7 +111,7 @@ Would you like to install Java? (Y/N, default: Y)
 若你的网络环境不理想, 你可以使用下面手动下载安装的方式
 :::
 
-从 [mirai-console-loader](https://github.com/iTXTech/mirai-console-loader/releases/tag/v1.2.3) 下载后缀为 `.zip` 的文件并解压
+从 [mirai-console-loader](https://github.com/iTXTech/mirai-console-loader/releases/latest) 下载后缀为 `.zip` 的文件并解压
 
 ---
 
@@ -162,12 +162,6 @@ xxxx-xx-xx xx:xx:xx I/main: mirai-console started successfully.
 现在先输入 `stop` 并回车, 退出 `mirai-console`
 
 ## 安装与配置 mirai-api-http
-
-::: warning
-受 `mirai-console-loader` 的影响，`mirai-api-http` 请下载 `v2.5.1` 及以下版本
-
-下载链接: [mirai-api-http-2.5.1.mirai.jar](https://github.com/project-mirai/mirai-api-http/releases/download/v2.5.1/mirai-api-http-2.5.1.mirai.jar)
-:::
 
 从 [mirai-api-http release](https://github.com/project-mirai/mirai-api-http/releases/latest) 下载最新的 `.jar` 文件.
 
