更新插件开发文档

--- a/docs/developer-v3/01.插件开发文档 v3/02.创建一个新的插件.md
+++ b/docs/developer-v3/01.插件开发文档 v3/02.创建一个新的插件.md
@@ -1,7 +1,7 @@
 ---
 title: 创建一个新的插件
 date: 2022-03-20 12:55:12
-permalink: /developer/doc/step-1
+permalink: /developer/v3/doc/step-1
 ---
 
 在 `app/plugin/extension` 目录新建一个文件夹, 文件名即为该插件的 `root_dir`.
