--- a/docs/developer-v3/01.插件开发文档 v3/03.命令解析配置.md
+++ b/docs/developer-v3/01.插件开发文档 v3/03.命令解析配置.md
@@ -1,7 +1,7 @@
 ---
 title: 命令解析配置
 date: 2022-03-20 13:02:11
-permalink: /developer/doc/step-2
+permalink: /developer/v3/doc/step-2
 ---
 
 ## 注册命令解析
