--- a/docs/v4/04.保持后台运行.md
+++ b/docs/v4/04.保持后台运行.md
@@ -30,7 +30,7 @@ permalink: /doc/v4/nohub
 - python 路径: `/opt/python3.9/bin/python`
 - madoka 路径: `/opt/madoka`
 
-```madoka.service
+```systemd
 ······
 
 # 将该路径修改为你的 Madoka 根路径
