--- a/docs/developer-v3/01.插件开发文档 v3/01.开始.md
+++ b/docs/developer-v3/01.插件开发文档 v3/01.开始.md
@@ -1,12 +1,12 @@
 ---
 title: 开始
-permalink: /developer/doc/
+permalink: /developer/v3/doc/
 date: 2022-02-06 15:55:06
 ---
 
 <div align="center">
 
-# Madoka
+# Madoka v3
 
 插件开发文档
 
